feat: Implement UserService with Clean Architecture
- Implemented the full UserService with Domain, Application, Infrastructure, and Presentation layers.
- Added User entity and IUserRepository for the Domain.
- Implemented IdentityApplicationService for registration and login use cases.
- Configured EF Core with a MySQL provider for persistence.
- Added API endpoints for user registration, login, and profile retrieval.
- Set up JWT generation and authentication configuration.

--- a/src/LibHub.UserService/LibHub.UserService.Api/LibHub.UserService.Api.csproj
+++ b/src/LibHub.UserService/LibHub.UserService.Api/LibHub.UserService.Api.csproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LibHub.UserService.Application\LibHub.UserService.Application.csproj" />
+    <ProjectReference Include="..\LibHub.UserService.Infrastructure\LibHub.UserService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
