--- a/src/LibHub.UserService/LibHub.UserService.Api/appsettings.Development.json
+++ b/src/LibHub.UserService/LibHub.UserService.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=user_db_test;User=root;Password=test123;Port=3306;"
+  },
+  "JwtSettings": {
+    "SecretKey": "test-secret-key-for-development-only-256-bits-long-enough",
+    "Issuer": "LibHub.UserService",
+    "Audience": "LibHubAudience"
   }
 }
