--- a/src/LibHub.UserService/LibHub.UserService.Api/appsettings.json
+++ b/src/LibHub.UserService/LibHub.UserService.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "THIS WILL BE OVERRIDDEN BY THE ENVIRONMENT VARIABLE FROM DOCKER COMPOSE"
+  },
+  "JwtSettings": {
+    "SecretKey": "THIS_WILL_BE_OVERRIDDEN_BY_ENV",
+    "Issuer": "LibHub.UserService",
+    "Audience": "LibHubAudience"
   }
 }
