--- a/src/LibHub.CatalogService/LibHub.CatalogService.Api/LibHub.CatalogService.Api.csproj
+++ b/src/LibHub.CatalogService/LibHub.CatalogService.Api/LibHub.CatalogService.Api.csproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LibHub.CatalogService.Application\LibHub.CatalogService.Application.csproj" />
+    <ProjectReference Include="..\LibHub.CatalogService.Infrastructure\LibHub.CatalogService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
