feat: Implement LoanService with Saga Pattern
- Implemented the full LoanService with Clean Architecture.
- Added Loan entity with state machine logic for loan lifecycle.
- Implemented LoanApplicationService as a Saga orchestrator for the 'Borrow Book' distributed transaction.
- Added ICatalogService interface and HttpClient for inter-service communication.
- Configured EF Core with Pomelo MySQL for persistence.
- Added API endpoints for borrowing, returning, and viewing loan history as per the OpenAPI spec.

--- a/src/LibHub.LoanService/LibHub.LoanService.Api/LibHub.LoanService.Api.csproj
+++ b/src/LibHub.LoanService/LibHub.LoanService.Api/LibHub.LoanService.Api.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LibHub.LoanService.Application\LibHub.LoanService.Application.csproj" />
+    <ProjectReference Include="..\LibHub.LoanService.Infrastructure\LibHub.LoanService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
