--- a/src/LibHub.LoanService/LibHub.LoanService.Api/appsettings.json
+++ b/src/LibHub.LoanService/LibHub.LoanService.Api/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "THIS WILL BE OVERRIDDEN BY THE ENVIRONMENT VARIABLE FROM DOCKER COMPOSE"
+    "DefaultConnection": "THIS_WILL_BE_OVERRIDDEN_BY_ENV"
+  },
+  "Authentication": {
+    "Authority": "http://localhost:5001"
   }
 }
