feat: Implement API Gateway with Ocelot and Consul
- Implemented the API Gateway as a single-project service.
- Added Ocelot, Ocelot.Provider.Consul, and JwtBearer packages.
- Configured all routing rules in ocelot.json for downstream services.
- Integrated with Consul for dynamic service discovery.
- Implemented JWT Bearer authentication to protect specific routes.
- Configured the middleware pipeline in Program.cs in the correct order.

--- a/src/LibHub.ApiGateway/LibHub.ApiGateway.Api/appsettings.json
+++ b/src/LibHub.ApiGateway/LibHub.ApiGateway.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "THIS_IS_MANAGED_BY_USER_SERVICE_AND_USED_FOR_VALIDATION_SETUP",
+    "Issuer": "LibHub.UserService",
+    "Audience": "LibHubAudience"
+  }
 }
